# ocsf-schema-rs

./: CHANGELOG  README.md
examples/: .gitignore
examples/deserialize-ocsf/: Cargo.toml  README.md  authentication.json  data.json  group.json  user.json
examples/deserialize-ocsf/src/: main.rs
examples/serialize-ocsf/: Cargo.toml  README.md
examples/serialize-ocsf/src/: main.rs
ocsf-schema-rs/: Cargo.toml  all.json
ocsf-schema-rs/src/: lib.rs
scripts/: download_schemas.py  generate_all_schema.py
