[package]
name = "ocsf-schema-rs"
version = "0.1.0-alpha"
edition = "2021"
license = "Apache-2.0"
description = "OCSF data types for Rust"
repository = "https://github.com/jasmaa/ocsf-schema-rs"
readme = "README.md"
keywords = ["ocsf"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
typify = "0.1.0"
