[package]
name = "deserialize-ocsf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = { version = "1.0", features = ["unbounded_depth"] }
serde_stacker = "0.1"
ocsf-schema-rs = { path = "../../ocsf-schema-rs" }